# mayastor-control-plane

./: Cargo.toml  shell.nix
common/src/types/v0/message_bus/: nexus.rs
common/src/types/v0/store/: nexus_persistence.rs  node.rs  volume.rs
common/src/types/v0/transport/: volume.rs
control-plane/agents/: Cargo.toml
control-plane/agents/common/src/: errors.rs  lib.rs
control-plane/agents/common/src/v0/: msg_translation.rs
control-plane/agents/core/src/: server.rs
control-plane/agents/core/src/core/: registry.rs
control-plane/agents/core/src/nexus/: registry.rs  specs.rs
control-plane/csi-driver/controller/src/: controller.rs
control-plane/deployer/src/: lib.rs
control-plane/deployer/src/infra/: mayastor.rs  mod.rs  nats.rs  rest.rs
control-plane/grpc/: Cargo.toml  build.rs
control-plane/grpc/protos/: common.proto  pool.proto
control-plane/grpc/src/: lib.rs  pool_transport.rs  traits.rs
control-plane/mbus-api/src/: lib.rs  v0.rs
control-plane/plugin/src/: operations.rs
control-plane/plugin/src/resources/: mod.rs  node.rs
control-plane/rest/: Cargo.toml
control-plane/rest/openapi-specs/: v0_api_spec.json  v0_api_spec.yaml
control-plane/rest/src/versions/: v0.rs
control-plane/rest/tests/: v0_test.rs
control-plane/store/src/: etcd.rs  store.rs
control-plane/store/tests/: etcd.rs
deployer/src/infra/: mayastor.rs
k8s/plugin/src/: main.rs
terraform/cluster/mod/libvirt/: main.tf
tests/bdd/: common.py  test_multi_volume_destroy.py  test_volume_replicas.py
tests/bdd/features/volume/: replicas.feature
(+21 files in other folders)
