[profile.dev]
panic = "abort"

[workspace]
members = [
    "common",
    "composer",
    "control-plane/agents",
    "control-plane/msp-operator",
    "control-plane/rest",
    "control-plane/csi-controller",
    "deployer",
    "kubectl-plugin",
    "openapi",
    "rpc",
    "control-plane/grpc",
    # Test mayastor through the rest api
    "tests/tests-mayastor",
]
